[package]
name = "js-in-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
deno_core = "0.181.0"
serde = "1.0.160"
serde_json = "1.0.96"
serde_v8 = "0.92.0"
